--- a/sections/product-main.liquid
+++ b/sections/product-main.liquid
@@ -56,6 +56,8 @@
       else
         render 'product-form'
       endif
+
+      render 'brauz-find-in-store'
     -%}
     <div class="pt-5 lg:pt-[38px]">
       {%- render 'product-description' -%}
